--- a/Pes_2023.ioc
+++ b/Pes_2023.ioc
@@ -10,13 +10,14 @@ IWDG.Reload=2500-1
 KeepUserPlacement=false
 Mcu.CPN=STM32F103C8T6
 Mcu.Family=STM32F1
-Mcu.IP0=IWDG
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=USART2
-Mcu.IP5=USART3
-Mcu.IPNb=6
+Mcu.IP0=I2C1
+Mcu.IP1=IWDG
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=USART2
+Mcu.IP6=USART3
+Mcu.IPNb=7
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
@@ -24,7 +25,9 @@ Mcu.Pin1=PD0-OSC_IN
 Mcu.Pin10=PB15
 Mcu.Pin11=PA13
 Mcu.Pin12=PA14
-Mcu.Pin13=VP_IWDG_VS_IWDG
+Mcu.Pin13=PB6
+Mcu.Pin14=PB7
+Mcu.Pin15=VP_IWDG_VS_IWDG
 Mcu.Pin2=PD1-OSC_OUT
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
@@ -33,7 +36,7 @@ Mcu.Pin6=PB11
 Mcu.Pin7=PB12
 Mcu.Pin8=PB13
 Mcu.Pin9=PB14
-Mcu.PinsNb=14
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -83,6 +86,10 @@ PB15.GPIO_Label=PES_DATA
 PB15.GPIO_PuPd=GPIO_PULLUP
 PB15.Locked=true
 PB15.Signal=GPIO_Input
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
+PB7.Mode=I2C
+PB7.Signal=I2C1_SDA
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
 PC13-TAMPER-RTC.GPIO_Label=LED_PC13
 PC13-TAMPER-RTC.Locked=true
